==================================================
->Renaming Uniformity::AnalyzeResponseUniformity::getFitBoundary() to getParsedInput() since this method is not explicit to the fit boundary but has multiple use cases
->Fixed a bug where Uniformity::AnalyzeResponseUniformity::getFit() was not properly setting the intial guess of a fit for the case where the user enters a complex expression

Update: May 20th 2016
==================================================
->Bug fix implemented in Uniformity::SelectorHit::setHits(); all hits in an event were incorrectly being assigned the ADC values of the 1st hit in the event.  A terrible hack has been implemented to resolve this...hopefully an elegant solution can be found...  Many thanks to M. Maggi for catching this!!!
->Added short type data member Uniformity::Hit::sADCIntegral to Hit struct to represent the integral of the ADC values
->Uniformity::SelectorHit::setHits now loads ADC of all time bins not just user requested window;
->Uniformity::SelectorHit::setHits now integrates ADC from all time bins and sets value to Uniformity::Hit::sADCIntegral;
->Added new histogram Uniformity::HistosPhysObj::hADCMax_v_ADCInt for tracking peak ADC value (in time) vs. intergarl of adc values (in time) to identify saturated hits
->Uniformity::AnalyzeResponseUniformityHits() now initializes, fills, and stores SectorEta(Phi)::hitHistos::hADCMax_v_ADCInt

Update: May 19th 2016
==================================================
->Observed a few cases where the normalized chi^2 (normchi2) value of a slice fit was INF or NaN, now code checks for this and sets normchi2 = -1 if this occurs.  This ensures the normchi2 distribution can always be drawn in ROOT.
->Added new utility function Uniformity::ceilPowerTen for recursively determining the smallest power of 10 larger than an input variable